<resources>
    <string name="app_name">SimpleMusicPlayer</string>

    <string name="default_status">Ничего не играет</string>
    <string name="btn_loop_all">Все</string>
    <string name="btn_loop_one">Один</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>

    <string name="btn_prev">&lt;&lt;</string>
    <string name="btn_next">&gt;&gt;</string>

    <string name="channel_name">Music Playback</string>
    <string name="notification_title">Лабораторная №7</string>
    <string name="notification_ready">Музыкальный плеер готов</string>
    <string name="notification_playing_template">Играет: %1$s</string>
    <string name="select_song">Выберите песню</string>

    <string name="permission_toast">Нужно разрешение для музыки!</string>
</resources>