<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ListView
        android:id="@+id/songListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/currentSongTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_status"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLoop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_loop_all" />

            <Button
                android:id="@+id/btnPrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_prev" />

            <Button
                android:id="@+id/btnPlayPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_play" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_next" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>